tests/cases/smoke/valid/func_defaults_and_named_calls.dp
func greet(name: str, title: str = "Mr") -> str = title + " " + name
var a = greet("Youniss")
var b = greet(title: "Dr", name: "Youniss")
