tests/cases/smoke/invalid/func_default_before_required.dp
func greet(title: str = "Mr", name: str) -> str = title + " " + name
